[package]
name = "adt"
description = "Aolwas data tools: small toy project for data processing while learning Rust"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = { version = "1" }
chrono = { version = "0.4" }
url = { version = "2.3" }
log = { version = "0.4" }
simple_logger = { version = "4.2" }

# sql dependencies
arrow = { version = "52", features = ["prettyprint"] }
deltalake = { version = "0.18.0", features = ["datafusion", "s3"]}
datafusion = { version = "39" }
object_store = { version = "0.10.1", features=["aws"] }

# tui
crossterm = { version = "0.27" }
ratatui = { version = "0.26" }

# runtime
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3" }

# For future dev
# axum = { version = "0.6" }
# hyper = { version = "0.14", features = ["full"] }
# tower = { version = "0.4" }