[package]
name = "adt"
description = "Aolwas data tools: small toy project for data processing while learning Rust"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = { version = "1" }
chrono = { version = "0.4" }
url = { version = "2.3" }
log = { version = "0.4" }
simple_logger = { version = "4.2" }
#secrecy = { version = "0.8.0" }
snafu = { version = "0.8.4" }

# sql dependencies
arrow = { version = "52", features = ["prettyprint"] }
delta_kernel = { version = "0.2", features = ["default-engine", "cloud"]}
datafusion = { version = "40" }
object_store = { version = "0.10.1", features=["aws"] }

# tui
crossterm = { version = "0.27" }
ratatui = { version = "0.27" }

# runtime
tokio = { version = "^1.0", features = ["rt-multi-thread"] }
futures = { version = "0.3" }
async-trait = { version = "0.1.81" }

# For future dev
# axum = { version = "0.6" }
# hyper = { version = "0.14", features = ["full"] }
# tower = { version = "0.4" }
