[package]
name = "adt"
description = "Aolwas data tools: small toy project for data processing while learning Rust"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = { version = "1" }
chrono = { version = "0.4" }
url = { version = "2.3" }
log = { version = "0.4" }
simple_logger = { version = "4.2" }
itertools = { version = "0.12" }
thiserror = { version = "1.0" }

# sql dependencies
arrow = { version = ">=53,<54", features = ["prettyprint"] }
delta_kernel = { version = ">=0.6, <0.7", features = [
    "default-engine",
    "cloud",
] }
datafusion = { version = ">=43,<44" }
datafusion-functions-json = { version = ">=0.43,<0.44" }
object_store = { version = ">=0.11,<0.12", features = ["aws"] }

# tui
crossterm = { version = "0.27" }
ratatui = { version = "0.27" }

# runtime
tokio = { version = "^1.0", features = ["rt-multi-thread"] }
futures = { version = "0.3" }
async-trait = { version = "0.1.81" }

# For future dev
# axum = { version = "0.6" }
# hyper = { version = "0.14", features = ["full"] }
# tower = { version = "0.4" }
